--- a/NumericParser/NumericParser.csproj
+++ b/NumericParser/NumericParser.csproj
@@ -1,15 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFrameworks>netstandard2.1;net8.0</TargetFrameworks>
     <LangVersion>latest</LangVersion>
+    <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
     <PackageId>NumericParser</PackageId>
-    <Version>1.0.0</Version>
+    <PackageReadmeFile>readme.md</PackageReadmeFile>
+    <Version>0.1.0</Version>
     <Authors>navferty</Authors>
     <PackageDescription>Flexibility parser for decimal values from string.</PackageDescription>
     <RepositoryUrl>https://github.com/navferty/NumericParser</RepositoryUrl>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Include="../readme.md" Pack="true" PackagePath="/" />
+  </ItemGroup>
 </Project>
