--- a/NumericParser/NumericParser.csproj
+++ b/NumericParser/NumericParser.csproj
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
 
     <PackageId>NumericParser</PackageId>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageReadmeFile>readme.md</PackageReadmeFile>
     <Version>0.9.0</Version>
     <Authors>navferty</Authors>
