--- a/NumericParser/NumericParser.csproj
+++ b/NumericParser/NumericParser.csproj
@@ -11,7 +11,7 @@
     <PackageReadmeFile>readme.md</PackageReadmeFile>
     <Version>0.9.0</Version>
     <Authors>navferty</Authors>
-    <PackageDescription>Flexibility parser for decimal values from string.</PackageDescription>
+    <PackageDescription>Flexible parser for decimal values from string.</PackageDescription>
     <RepositoryUrl>https://github.com/navferty/NumericParser</RepositoryUrl>
   </PropertyGroup>
 
